avoid gap at top of slide

--- a/modules/ContentSlider/blocks/content-slider/style.css
+++ b/modules/ContentSlider/blocks/content-slider/style.css
@@ -21,6 +21,7 @@
             &,
             > .kt-inside-inner-col {
                 height: 100%;
+                justify-content: flex-start;
             }
         }
     }
